some updates on main page

--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -16,4 +16,19 @@
       </ul>
    </nav>          
 </header>
+
+<body>
+    <section class="grid-galeria">
+        <div class="item-galeria">
+            <img src="./fotos/bulbophyllum-eberhardtii.jpg" alt="bulbophyllum-eberhardtii">
+            <h3>Bulbophyllum-Eberhardtii</h3>
+            <p>Descrição (ir pesquisar)</p>
+        </div>
+        <div class="item-galeria">
+            <img src="./fotos/cattleya-crystelle-smith.jpg" alt="cattleya-crystelle-smith">
+            <h3>Cattleya-Crystelle-Smith</h3>
+            <p>Descrição (ir pesquisar)</p>
+        </div>
+    </section>
+</body>
 </html>
